# dotfiles

./: --global  .Brewfile  .Brewfile.g1  .Brewfile.g2  .Brewfile.goff  .Brewfile.lock.json  .Brewfile.main  .Brewfile.removed  .Brewfile_test.lock.json  .Brewfile_z  .amethyst.md  .amethyst.yml  .bash_profile  .bashrc  .bashrcz  .cache  .direnvrc  .gitignore  .skhdrc  .tmux.conf  .yabairc  .zprofile  .zshenv  .zshrc  RectangleConfig.json  _karabiner_z.edn  extension_error_lens_settings.txt  extension_status_bar_settings.txt  hyper.lua  init.lua  init.vim  init_ref.lua  karabiner.edn  karabiner.json  karabiner.md  karabiner_z.edn  keybindings.json  kitty.conf  kitty.config  linux_install.md  (+18 more)
Z/Contents/: Info.plist  document.wflow
Z/keyboard/: Cargo.toml  build  main.py
Z/keyboard/src/: lib.rs  z.rs
Z/keyboard/z/: _keyboard.py  listener.py  listener2.py
Z/launcher/: main.py  main2.py
Z/menu_items/: main.py  main.sh  services.plist
Z/swift_keylogger/: Package.swift  README.md  main.swift
commands/: commands.py  commands.sh  finder-selection
karabiner/: karabiner  karabiner.json  readme.md
karabiner/automatic_backups/: karabiner_20230714.json  karabiner_20230716.json  karabiner_20230717.json  karabiner_20230725.json
link.app/Contents/: Info.plist
swift/: .envrc  Package.resolved  Package.swift  README.md  modules.py  modules.swift
util/: VTDecoderXPCService.plist  VTDecoderXPCService.sh  common.py  make_exec  newproj  newproj copy  ninstall  ninstall.py  transfer
util/linktrigger/: .vlc-open.applescript  _UNUSED_open_from_pycharm.py  open.py  save.py  (+2 more)
(+44 files in other folders)
