[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["George Hill <georgehill010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^1.0.0"
pyautogui = "^0.9.54"
setproctitle = "^1.3.2"
pygetwindow = "^0.0.9"  # get the frontmost application
mac-vlc = "^2020.12.3"  # open vlc videos to avoid error with filenames containing brackets
pytest-cython-collect = "^0.2"
pyperclip = "^1.8.2"  # read clipboard
easygui = "^0.98.3"  # display dialog for debugging

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dotfiles"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
