[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "keyboard"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
rdev = "*"
env_logger = "0.9"
proctitle = "0.1.1"
ctrlc = "3.2"
lazy_static = "1.4"
core-graphics = "0.22.3"
itertools = "0.10.5"

